[gd_scene load_steps=18 format=2]

[ext_resource path="res://alphaTest/my_tileSet.tres" type="TileSet" id=1]
[ext_resource path="res://imagesAlpha/pisLleno.png" type="Texture" id=2]
[ext_resource path="res://imagesAlpha/pisVacio.png" type="Texture" id=3]
[ext_resource path="res://imagesAlpha/pisMitad.png" type="Texture" id=4]
[ext_resource path="res://imagesAlpha/inventario.png" type="Texture" id=5]
[ext_resource path="res://alphaTest/Area2D.gd" type="Script" id=6]
[ext_resource path="res://imagesAlpha/abierto.png" type="Texture" id=7]
[ext_resource path="res://imagesAlpha/cerrado.png" type="Texture" id=8]
[ext_resource path="res://KinematicBody2D.gd" type="Script" id=9]
[ext_resource path="res://imagesAlpha/jugadorLateral.png" type="Texture" id=10]
[ext_resource path="res://imagesAlpha/jugadorSaltando.png" type="Texture" id=11]
[ext_resource path="res://imagesAlpha/jugadorFrontal.png" type="Texture" id=12]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "lleno",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "vacio",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "medio",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "abierto",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "cerrado",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 23.8599, 23.705 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="SpriteFrames" id=5]

animations = [ {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "mover",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "salto",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "frente",
"speed": 5.0
} ]

[node name="Level2" type="Node" index="0"]

[node name="Node" type="Node" parent="." index="0"]

editor/display_folded = true

[node name="TileMap" type="TileMap" parent="Node" index="0"]

mode = 0
tile_set = ExtResource( 1 )
cell_size = Vector2( 50, 50 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -131071, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 131076, 0, 0, 131093, 0, 0, 131094, 0, 0, 131095, 0, 0, 131096, 0, 0, 262146, 0, 0, 393220, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 524290, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 786455, 0, 0, 786456, 0, 0, 786457, 0, 0, 786458, 0, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 851991, 0, 0, 851992, 0, 0, 851993, 0, 0, 851994, 0, 0, 917504, 0, 0, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 917520, 0, 0, 917521, 0, 0, 917522, 0, 0, 917523, 0, 0, 917524, 0, 0, 917525, 0, 0, 917526, 0, 0, 917527, 0, 0, 917528, 0, 0, 917529, 0, 0, 917530, 0, 0 )
_sections_unfolded = [ "Cell" ]

[node name="CanvasLayer" type="CanvasLayer" parent="Node" index="1"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 0.2, 0.3 )
transform = Transform2D( 0.2, 0, 0, 0.3, 0, 0 )

[node name="Barra_vomito" type="AnimatedSprite" parent="Node/CanvasLayer" index="0"]

position = Vector2( 230.689, 869.592 )
scale = Vector2( 0.537929, 1.04354 )
frames = SubResource( 1 )
animation = "lleno"
_sections_unfolded = [ "Transform" ]

[node name="Inventario" type="Sprite" parent="Node/CanvasLayer" index="1"]

position = Vector2( 500, 2250 )
scale = Vector2( 4.375, 2.66667 )
texture = ExtResource( 5 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="itemCambio" type="Node" parent="." index="1"]

[node name="item" type="Area2D" parent="itemCambio" index="0" groups=[
"accionables",
]]

position = Vector2( 602.375, 367.823 )
scale = Vector2( 0.775809, 0.775809 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="spr_item" type="AnimatedSprite" parent="itemCambio/item" index="0" groups=[
"accionables",
]]

position = Vector2( -30.8732, -32.5055 )
scale = Vector2( 1.28321, 1.2962 )
frames = SubResource( 2 )
animation = "cerrado"
centered = false

[node name="col_item" type="CollisionShape2D" parent="itemCambio/item" index="1" groups=[
"accionables",
]]

position = Vector2( 1.38272, -0.249516 )
scale = Vector2( 1.28321, 1.2962 )
shape = SubResource( 3 )

[node name="PJ" type="Node" parent="." index="2"]

[node name="kin_Pj" type="KinematicBody2D" parent="PJ" index="0" groups=[
"player",
]]

position = Vector2( 395.544, 401.89 )
scale = Vector2( 0.779433, 0.78241 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 9 )
_sections_unfolded = [ "Collision", "Material", "Transform", "Visibility", "collision" ]
__meta__ = {
"_edit_group_": true
}

[node name="col_Pj" type="CollisionShape2D" parent="PJ/kin_Pj" index="0"]

position = Vector2( 0.184937, -18.6729 )
scale = Vector2( 2.50739, 1.64822 )
shape = SubResource( 4 )

[node name="spr_Pj" type="AnimatedSprite" parent="PJ/kin_Pj" index="1"]

position = Vector2( -0.40387, 0.867371 )
scale = Vector2( 1.28298, 1.2781 )
frames = SubResource( 5 )
animation = "mover"

[node name="Camera2D" type="Camera2D" parent="PJ/kin_Pj" index="2"]

position = Vector2( 7.67322, 1.1813 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[connection signal="body_entered" from="itemCambio/item" to="itemCambio/item" method="_on_Area2D_body_entered"]

[connection signal="body_exited" from="itemCambio/item" to="itemCambio/item" method="_on_Area2D_body_exited"]

[connection signal="accion" from="PJ/kin_Pj" to="itemCambio/item" method="_on_kin_Pj_accion"]


